# PolGen

./: .gitignore  README.md  TODO.md  VERSION  app.py  app_offline.py  download_models.py  requirements-win.txt  requirements.txt  run-PolGen-installer.bat  run-PolGen-installer.sh  run-PolGen.bat  run-PolGen.sh  run-install.bat
.github/workflows/: code_formatter.yml  code_linter.yml  release.yml  test_cli.yml  test_links.yml
PolGen/rvc/: README.md
PolGen/tts/: README.md
PolGen/ui/: README.md
assets/: model_installer.py  notebook_check.py  version.py
assets/i18n/: i18n.py  scan.py
desktop/: .gitignore  __init__.py  index.html  package-lock.json  package.json  setup.html  svelte.config.js  tsconfig.json  vite.config.ts
desktop/backend/: __main__.py  app.py  jobs.py  model_install.py  schemas.py  worker.py
desktop/src/: App.svelte  main.ts  setup.css  setup.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
gradio_ui/: inference.py  install.py  uvr.py  welcome.py  wrappers.py
gradio_ui/components/: helpers.py  modules.py
polgen_backend/: __main__.py  app.py  edge_voices.py  jobs.py  model_install.py  schemas.py  worker.py
rvc/cli/: edge_tts_cli.py  rvc_cli.py
rvc/infer/: config.py  infer.py  infer_cli.py  pipeline.py
rvc/lib/: fairseq.py  my_utils.py  progress.py
rvc/modules/: FlashSR.py  audio_upscaler.py  download_source.py  edge_voices.py  model_manager.py  uvr_core.py
rvc/scripts/: audio_processing.py  edge_tts_conversion.py  (+1 more)
tabs/: edge_tts.py  inference.py  install.py  uvr.py
(+66 files in other folders)
